--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,23 +18,21 @@ body {
   align-items: center;
   justify-content: center;
   position:absolute;
-  background-image: linear-gradient(#f9af96,#6c1a7c);
+  background-image: linear-gradient(#5a5958,#fafafa);
   background-repeat: no-repeat;
   background-attachment: fixed;
-  /* overflow: hidden; */
 }
 
 .header {
   background: none repeat scroll 0 0 #E0E0E0;
-  background-image:url(../images/sunset\ mountains\ clouds\ 1920x1080\ wallpaper_www.wallpaperhi.com_60.jpg);
+  background-image:url(../images/1501537457860-the-photo-full-version-is-76x-higher-resolution.jpeg);
   padding:100px;
-  display:block;
   text-align: center;
   border-radius: 5px 5px 5px 5px;
   height: 600px;
   position: absolute;
   top: 0;
-  width: 101%; 
+  width: 100%;
 }
 .header-background {
   display:flex;
@@ -46,7 +44,6 @@ body {
   font-size: 75px;
   font-family:Georgia, 'Times New Roman', Times, serif;
   text-decoration-color: white;
-  background-image:url(../assets/pexels-john-cahil-rom-2170473.jpg);
   color:white;
 }
 nav {
@@ -62,7 +59,6 @@ nav {
 	width:100%;
 	z-index: 1;
   background-color: transparent;
-	/* background-color: #FFFFFF; */
 } 
 
 .logo img {
@@ -94,27 +90,24 @@ nav ul li a:hover {
 }
 .content {
   display:flex;
-  /* flex:1; */
-  top:3;
+  top:2;
 }
 .card {
-  display: flex;
-  grid-template-columns: 300px;
-  grid-template-rows: 210px 210px 80px;
-  grid-template-areas: "image" "text" "stats";
-  border-radius: 18px;
-  box-shadow: 5px 5px 15px rgba(0,0,0,0.9);
-  font-family: roboto;
-  text-align: center;
-  transition: 0.5s ease;
-  cursor: pointer;
-  height: 290px;
-  margin:50px;
-  perspective:1000px;
+  
+  background-color: #715770;
+  text-decoration:none;
+  padding: 15px 25px;
+  font-family: sans-serif;
+  font-size: 25px;
+  color: #fff;
+  border-radius:10px;
+  border:1px solid rgb(0, 0, 0);
+  display: inline-block;
+  overflow:hidden;
 }
+
 .card-image {
   grid-area: image;
-  background: url("img1.jpg");
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   background-size: cover;
@@ -157,13 +150,14 @@ nav ul li a:hover {
   text-transform: uppercase;
 }
 .card:hover {
-  transform: scale(1.15);
-  box-shadow: 5px 5px 15px rgba(0,0,0,0.6);
+  -webkit-box-shadow: 0px 0px 100px 0px rgba(218,142,145,1);
+  -moz-box-shadow: 0px 0px 100px 0px rgba(218,142,145,1);
+  box-shadow: 0px 0px 100px 0px rgba(218,142,145,1);
+  transition: 0.8s ease;
 }
 
 /*card2*/
 .card-image.card2 {
-  background: url("img2.jpg");
   background-size: cover;
 }
 .card-text.card2 .date {
@@ -171,7 +165,6 @@ nav ul li a:hover {
 }
 /*card3*/
 .card-image.card3 {
-  background: url("img3.jpg");
   background-size: cover;
 }
 .card-text.card3 .date {
@@ -185,11 +178,15 @@ nav ul li a:hover {
   width:100%;
   height: 400px;
 }
-h1 {
-  text-align: center;
-}
 .bigcard {
-  backface-visibility: hidden;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  top: 500px;
+  flex-wrap: wrap;
+  background-color: transparent;
+  width: 300px;
+  height: 200px;
   position: absolute;
   width:800px;
   height:650px;
@@ -197,97 +194,116 @@ h1 {
   grid-template-columns: 300px;
   grid-template-rows: 210px 210px 80px;
   grid-template-areas: "image" "text" "stats";
-  border-radius: 25px;
+  border-radius: 5px;
   background-position: left top;
   background-repeat: repeat;
-  box-shadow: 5px 5px 15px rgba(0,0,0,0.9);
   text-align: center;
   transition: 1.5s ease;
-  /* transform: translate(-50%, -50%); */
-  cursor: pointer;
-  margin:50px;
-  perspective:1000px;
 }
-.bigcard:hover {
-  transform: rotateY(180deg);
-}
-.card-inner {
-  position:relative;
-  backface-visibility: hidden;
-  width:100%;
-  height:100%;
-  text-align: center;
-  transition: all 0.8s ease;
-  transform-style:preserve-3d;
-  box-shadow:0 4px 8px 0 rgba(0,0,0,0.2);
-}
-.bc-front {
-  /* position:absolute; */
-  display:flex;
-  justify-content: center;
-  align-items: center;
-  overflow:hidden;
-  width:100%;
-  height:100%;
-  top:300px;
-  backface-visibility: hidden;
-}
-.bc-back {
-  position: absolute;
-  top: 0;
-  left: 0;
+.bc-inner {
+  position: relative;
   width: 100%;
   height: 100%;
-  border-radius: 10px;
-  backface-visibility:hidden;
-  color: #333;
   text-align: center;
-  transform: rotateY(180deg);
+  transition: transform 0.8s;
+  backface-visibility: hidden;
+  transform-style: preserve-3d;
 }
 .bc-front img {
-  flex-shrink: 0;
-  border-radius: 50%;
-  padding:1px;
-  margin: 10px;
-  bottom:100px;
-  /* min-width: 100%; */
+  height: 50px;
+  margin: 0;
+  min-width: 100%; 
   min-height: 100%;
-  object-fit:cover;
-  overflow:hidden;
+  opacity: 0.4;
 }
-.bc-text {
-  grid-area: text;
-  margin: 25px;
-}
-.bc-text .bc-date {
-  color: rgb(0, 0, 0);
-  font-size:13px;
-}
-.bc-text p {
-  color: rgb(0, 0, 0);
-  font-size:15px;
-  font-weight: 300;
-}
-.card-bc h2 {
-  margin-top:0px;
-  font-size:28px;
+.bc-back img {
+  height: 50px;
+  margin: 0;
+  min-width: 100%; 
+  min-height: 100%;
+  opacity: 0.4;
 }
 h1 {
-  font-size: 5rem;
-  text-transform: capitalize;
+  position: absolute;
+  top: 50px;
+  left:250px;
+  width: 100%;
+  margin: 0 auto;
+  width: 300px;
+  height: 50px;
 }
-.bc-front h1, .bc-back h1{
-  font-family: 'zilla slab', sans-serif;
-  padding: 30px;
-  font-weight: bold;
-  font-size: 24px;
+p.back {
+  position: absolute;
+  top: 120px;
+  left: 0;
+  width: 100%;
+  margin: 0 auto;
+  width: 300px;
+  white-space: nowrap;
+}
+.bigcard:hover .bc-inner {
+  transform: rotateY(180deg);
+}
+
+/* Positioning the front and back side */
+.bc-front, .bc-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+/* Style the front side of Bigcard. */
+.bc-front {
+  background-color: transparent;
+  color: black;
+  text-align: center;
+  display:block;
+  grid-area: text;
+}
+
+/* Style for the backside of Bigcard. */
+.bc-back {
+  background-color: transparent;
+  color: white;
+  transform: rotateY(180deg);
+  text-align: center;
+  position: absolute;
+  grid-template-columns: 300px;
+  grid-template-rows: 210px 210px 80px;
+  grid-template-areas: "image" "text" "stats";
+}
+.mid h3 {
   text-align: center;
 }
 
-.bc-front p, .bc-back p{
-  font-family: 'zilla slab', sans-serif;
-  padding: 30px;
-  font-weight: normal;
-  font-size: 12px;
+.mid p {
   text-align: center;
+}
+
+form {
+  position:absolute;
+  top:270vh;
+  text-align: center;
+}
+
+@media screen and (max-width: 992px) {
+  body {
+    background: #df9a91;
+  }
+}
+
+/* Large smartphones - navbar changes color */
+@media screen and (max-width: 768px) {
+  nav {
+    background-color: #ff0a17;
+  }
+}
+
+/* Small smartphones - image placeholders change color */
+@media screen and (max-width: 576px) {
+  .sample-img {
+    background-color: #8ac4ff;
+  }
 }
