--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,7 @@ nav ul li a:hover {
   font-family: sans-serif;
   font-size: 25px;
   color: #fff;
+  margin: 20px;
   border-radius:10px;
   border:1px solid rgb(0, 0, 0);
   display: inline-block;
@@ -284,9 +285,11 @@ p.back {
 
 form {
   position:absolute;
-  top:270vh;
+  top:290vh;
+  right: 85vh;
   text-align: center;
 }
+
 
 @media screen and (max-width: 992px) {
   body {
@@ -294,14 +297,12 @@ form {
   }
 }
 
-/* Large smartphones - navbar changes color */
 @media screen and (max-width: 768px) {
   nav {
     background-color: #ff0a17;
   }
 }
 
-/* Small smartphones - image placeholders change color */
 @media screen and (max-width: 576px) {
   .sample-img {
     background-color: #8ac4ff;
